# androidstorage4kivy

./: .gitignore  README.md  setup.cfg
src/androidstorage4kivy/: __init__.py  chooser.py  sharedstorage.py  sharesheet.py
src/androidstorage4kivy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
